--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
     box-shadow: 5px 5px 0px #808080;
 }
 
-#screen-container {
+#display-container {
     /* border: 2px solid green; */
     width: 100%;
     flex-grow: 1;
@@ -38,7 +38,7 @@ body {
     align-items: center;
 }
 
-#screen {
+#display {
     /* border: 2px solid violet; */
     font-size: 25px;
     color: #ffffff;
@@ -68,10 +68,19 @@ body {
     align-items: center;
 }
 
-.number {
+.btn-number {
     background-color: #4b4b4b;
 }
 
-.operator {
+.btn-operator {
     background-color: #d3940d;
+}
+
+.reset {
+    background-color: #aaaaaa;
+}
+
+.disabled {
+    background-color: #000000;
+    cursor: unset;
 }
