--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ html {
 
 body {
     font-family: "Open Sans", sans-serif;
+    margin: 0;
+    padding: 0;
     font-weight: 400;
     background-color: #313131;
     display: flex;
@@ -78,8 +80,14 @@ body {
     background-color: #d3940d;
 }
 
-.btn-clear {
+.btn-clear,
+.btn-backspace {
     background-color: #aaaaaa;
+}
+
+.btn-backspace {
+    background-color: #aaaaaa;
+    font-weight: 700;
 }
 
 .disabled {
